--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,8 @@
 <style></style>
 <body>
     <h1>Club Viejuner (formulario)</h1>
-    <h2>Tú:</h2>
+    <fieldset>
+    <legend>Tú:</legend>
     <label for="first-name">Nombre</label><br />
     <input type="text" name="first-name" id="first-name" placeholder="Pepe" required/>
 ​<br />
@@ -18,7 +19,7 @@
 ​<br />
 
     <label for="Edad">¿Qué edad tienes?</label> <br>
-    <input type="number" name="edad" id="Edad" required>
+    <input type="number" name="edad" id="Edad"  autofocus="autofocus" required>
 
     <br>
 
@@ -30,7 +31,7 @@
         <label for="Hombre">Soy Hombre </label>
         <br>
 
-        <p>¿Te sientes Viejuner?</p>
+        <p tabindex="4">¿Te sientes Viejuner?</p>
         <input type=checkbox id="Viejuner" name="Viejuner"></input>
         <br>
         <label for="description">Escribe algo sobre ti</label><br />
@@ -49,7 +50,9 @@
         <input type="text" id="email" name="email"><br><br>
         <label for="Telefono">Telefono:</label>
         <input type="tel" id="telefono" name="telefono"><br><br>
-        <input type="submit">
+        <input type="reset" value="Reset">
+        <input type="submit" value="Submit">
+    </fieldset>
       </form>
       <br />
 
