--- a/ladrones.html
+++ b/ladrones.html
@@ -1,93 +1,12 @@
 ### Los ladronzuelos de bicicletas ###
-
-Día: fecha
-
-Hora: tiempo
-
-Color de la bicicleta: color
-
-Rango de precio: range
-
-Tipo de bicicleta: selector
-
-  - Paseo
-
-      - Señorial
-
-      - Anti-plebeyos
-
-      - PorEncimaDelHombro
-
-  - Montaña
-
-      - Gamusinos
-
-      - Hueleflores premium
-
-      - Fango lover
-
-  - Carreras
-
-      - Metroymedio
-
-      - 3 de la tarde. Fluorescente edition
-
-      - Grupitors
-
-Accesorios: selector multiple
-
-  - Ruedines
-
-  - Pegatinas
-
-  - Cestita
-
-  - Bomba de aire
-
-  - Timbre
-
-  - Foco
-
-¿Qué marca era?: Autocompletado
-
-  - specialized
-
-  - trek
-
-  - merida
-
-  - scott
-
-  - giant
-
-  - cube
-
-  - lapierre
-
-  - orbea
-
-  - cannondale
-
-  - bmc
-
-  - canyon
-
-  - look
-
-  - protek
-
-  - megamo
-
-  - pinarello
-
-  - bianchi
-
-  - bh
-
-  - factor
-
-  - ghost
-
-  - cervélo
-
-  - argon
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
