--- a/ladrones.html
+++ b/ladrones.html
@@ -5,8 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
-    
+    <legend>Ladronzuelos de bicicletas</legend>
+    <fieldset>
+    <form>
+        <label for="fecha">Dia:</label>
+        <input type="datetime" name="fecha" id="fecha"
+    </form>
+</fieldset>
 </body>
 </html>
