--- a/ladrones.html
+++ b/ladrones.html
@@ -12,7 +12,7 @@
     <fieldset>
     <form>
         <label for="fecha">Dia:</label>
-        <input type="datetime" name="fecha" id="fecha"
+        <input type="date" name="fecha" id="fecha">
     </form>
 </fieldset>
 </body>
